--- a/starter-code/new.html
+++ b/starter-code/new.html
@@ -12,15 +12,22 @@
     <!-- NOTE (stretch goal): To fully incorporate the highlighting library "hljs" we need to fill the empty link tag below to refer to a CSS file that will handle our text highlighting -->
     <link>
     <!-- TODO: We want our new article form to be able to display a preview of the article that is being entered. Thus, we need code here that will recreate the same structure of our other articles. What do you think we need to add here? -->
+    </script>
     </head>
   <body>
+
+
+
+</form>
     <header class="site-header clearfix">
+
       <section class="heading-group-h1 pull-left">
         <h1>
           Kilovolt Blog!
         </h1>
         <h2>The shocking power of static pages</h2>
       </section>
+
       <nav class="main-nav">
         <div class="icon-menu"></div>
         <ul>
@@ -32,9 +39,41 @@
     </header>
     <main class="clearfix">
 
-      <section id="write" class="tab-content">
+      <section id="write"   $('#entryForm').hide();>
         <h1>Create New Article</h1>
-        <!-- TODO: Set up a form to accept user input for a new blog article. Remember that we need:
+        <section>
+         <form id="entryForm">
+           <fieldset>
+             <legend>New Article Entry</legend>
+               <label>Title
+                 <input  type="text"  id="entryTitle" placeholder="Article title">
+               </label><br>
+
+               <label>Author
+                 <input type="text"  id="entryTitle" placeholder=" Article author">
+               </label><br>
+
+               <label>Author's URL
+                 <input type="text"  id="entryTitle" placeholder=" Author's URL">
+               </label><br>
+
+               <label>Category
+                 <input type="text"  id="entryTitle" placeholder="Article category">
+               </label><br>
+
+               <label>Article Text
+                 <textarea rows="10" id="entryText" placeholder="Text"></textarea>
+               </label>
+               <input type="radio" name="articleStatus" id="published"> Published </input>
+                <input type="radio" name="articleStatus" id="draft"> Draft </input>
+
+            <button ><submit id="Save">Save Entry</submit></button>
+          </fieldset>
+         </form>
+
+        </section>
+        <!-- TODO:Done
+         Set up a form to accept user input for a new blog article. Remember that we need:
                    1. Article title
                    2. Article body
                    3. Article author
@@ -43,7 +82,7 @@
                    6. Some way to know if this article is a draft or is published -->
       </section>
 
-      <section id="articles" class="tab-content">
+      <section id="articlesPreview" class="tab-content">
         <!-- NOTE: This is where we will display our article preview -->
       </section>
 
@@ -59,13 +98,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.4/handlebars.js"></script>
     <!-- NOTE (stretch goal): Include script tags for 3rd party libraries to enable Markdown rendering and code syntax highlighting. If we are not using a CDN and instead choose to store these scripts with our project, make sure to put them into an appropriate location in the 'vendor' directory. Keep in mind that if we want these features to render properly on our main blog page (index.html) that we'll need to add those scripts over there, too. -->
-    <script src="/scripts/blogArticles.js"></script>
-    <script src="/scripts/article.js"></script>
-    <script src="/scripts/articleView.js"></script>
+    <script src="scripts/blogArticles.js"></script>
+    <script src="scripts/article.js"></script>
+    <script src="scripts/articleView.js"></script>
     <script>
+      articleView.initIndexPage();
+
       // TODO: We will need to call a function here to initialize the behaviors on this page, once we get them built out. Why?
       // (Look at the bottom of index.html as a reference. Since we are now using our JS on two different HTML pages that have different needs as to what parts of the code they utilize, we need to build a function that inializes each page.)
       //  Hint: Look in articleView.js for a function that does this.
+
     </script>
   </body>
 </html>
