--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles/modules.css">
     <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
 
-    <script id="article-template" type="text/x-handlebars-template">
+    <script id="#articlesPreview" type="text/x-handlebars-template">
       <article class="clearfix" data-author="{{author}}" data-category="{{category}}">
         <header>
           <h1>{{title}}</h1>
@@ -86,7 +86,7 @@
     <script src="/scripts/articleView.js"></script>
     <script>
       // REVIEW: What is this function doing? Why do we need it? Will we need one like it on the new article page that we are creating?
-      articleView.initIndexPage()
+      articleView.initIndexPage();
     </script>
   </body>
 </html>
