--- a/starter-code/new.html
+++ b/starter-code/new.html
@@ -32,14 +32,14 @@
         <div class="icon-menu"></div>
         <ul>
           <!-- NOTE (stretch goal): In the same way that we enabled tab navigation on index.html, we can do the same on this page utilizing these elements. -->
-          <li class="tab" data-content="write"><a href="#" class="icon-home"> Write</a></li>
+          <li class="tab" id="write"data-content="write"><a href="#" class="icon-home"> Write</a></li>
           <li class="tab" data-content="articles"><a href="#" class="icon-home"> Preview</a></li>
         </ul>
       </nav>
     </header>
     <main class="clearfix">
 
-      <section id="write"   $('#entryForm').hide();>
+      <section id="newArticle">
         <h1>Create New Article</h1>
         <section>
          <form id="entryForm">
@@ -89,6 +89,15 @@
       <section id="article-export">
         <!-- TODO: Refer to the preview image to see what we will be building here: we need a container of some kind to hold a JSON export of our article. Ideally this container would show only a incipit (short preview) of the JSON and also be clickable to allow easy selection of the text it holds. What kind of element could we use for this? -->
       </section>
+      <script id="article-template" type="text/x-handlebars-template">
+        <article class="clearfix" data-author="{{author}}" data-category="{{category}}">
+          <header>
+            <h1>{{title}}</h1>
+          </header>
+          <section class="article-body">{{{body}}}</section>
+          <a href="#" class="read-on">Read on &rarr;</a>
+        </article>
+      </script>
 
     </main>
     <footer>
